tests/NormalTests/paczka2/big_fuzzy/31163780.err
Error in line 9: HjwPO A556 83,8
Error in line 13: YjCEYbzCCHP A993 87,3
Error in line 18: YjCEYbzCCHP A245 24,2
Error in line 16: ShSSRGCIWTJ A556 30,8
Error in line 22: ShSSRGCIWTJ A245 73,4
Error in line 53: gkgf A556 98,3
Error in line 55: gkgf A993 58,5
Error in line 59: A245 A245 19,4
Error in line 58: gkgf A245 70,6
Error in line 64: gkgf A556 43,2
Error in line 65: gkgf A245 16,2
Error in line 40: ShSSRGCIWTJ A993 248,4
Error in line 85: YjCEYbzCCHP A245 162,51
Error in line 92: pUCE 993 37,6
Error in line 93: ShSSRGCIWTJ A245 14,4
Error in line 97: dapdTYv A218 79,56
Error in line 98: pUCE A993 58,3
Error in line 101: pUCE A556 206,I
Error in line 86: dapdTYv A993 29,5
Error in line 110: YjCEYbzCCHP A245 272,4
Error in line 113: pUCE A993 77,20
Error in line 112: YjCEYbzCCHP A993 65,5
Error in line 108: dapdTYv A218 246,0
Error in line 99: pUCE A556 47,2
Error in line 128: pUCE A993 319,6
Error in line 129: pUCE A245 16,8
Error in line 141: ShSSRGCIWTJ A245 52,2
Error in line 150: ShSSRGCIWTJ A218 -2,0
Error in line 151: HjwPO A245 61,9
Error in line 155: HjwPO A556 54,4
Error in line 170: ShSSRGCIWTJ A218 8,6
Error in line 169: gkgf A556 59,8
Error in line 177: gkgf A993 23,2
Error in line 181: pUCE A993 93,8
Error in line 198: gkgf A245 69,3
Error in line 209: HjwPO A218 54,0
Error in line 223: YjCEYbzCCHP A556 59,5
Error in line 224: YjCEYbzCCHP A218 22,1
Error in line 229: ShSSRGCIWTJ A245 11,6
Error in line 219: A245 A993 92,6
Error in line 243: dapdTYv A556 84,2
Error in line 239: pUCE A556 59,0
